# opengp

./: .env.example  .gitea-mcp.json  .gitignore  AGENTS.md  ARCHITECTURE.md  BLOCK1_COMPLETE.md  CALENDAR_IMPLEMENTATION.md  CHANGELOG-PATIENT-GENERATION.md  Cargo.toml  DATABASE_SETUP.md  Dockerfile.api  ENCRYPTION.md  GAP_ANALYSIS.md  INTEGRATIONS.md  ISSUE_REPORT.md  KEYBINDS.md  MOCK-PATIENTS.md  MOUSE_HANDLING_ANALYSIS.md  Makefile  NEXT_STEPS_PLAN.md  PAGINATION_AUDIT.md  PATIENT-GENERATION.md  PATIENT-LIST-DEMO.md  PHASE_7_3_COMPLETION.md  QUICK-START.md  QUICKSTART.md  README-TUI.md  README.md  REFACTORING_PLAN.md  REQUIREMENTS.md  SEARCH-FEATURE.md  STANDARDIZATION_REPORT.md  codegraph_viz.html  docker-compose.yml  libform_navigation.rlib  mcp.json  output.txt  pre-refactor-baseline.txt  run-dev.sh  zenbones-zenwritten-dark.toml
crates/opengp-api/: Cargo.toml
crates/opengp-api/src/: config.rs  error.rs  lib.rs  main.rs  migrations.rs  routes.rs  services.rs  state.rs
crates/opengp-api/src/routes/: appointments.rs  auth.rs  consultations.rs  middleware.rs  mod.rs  patients.rs  practitioners.rs
crates/opengp-cache/: Cargo.toml
crates/opengp-cache/src/: appointment_cache.rs  circuit.rs  error.rs  lib.rs  patient_cache.rs  pool.rs  search_cache.rs  service.rs  stampede.rs
crates/opengp-cache/tests/: redis_resilience.rs
crates/opengp-config/: Cargo.toml
crates/opengp-config/src/: allergies.toml  app.toml  appointments.toml  clinical.toml  forms.rs  forms.toml  healthcare.rs  healthcare.toml  lib.rs  patient.toml  practice.toml  social_history.toml  theme.toml
crates/opengp-domain/: Cargo.toml
crates/opengp-domain/src/: lib.rs
crates/opengp-domain/src/domain/: error.rs  macros.rs  mod.rs  repository.rs
crates/opengp-domain/src/domain/api/: dto.rs
crates/opengp-domain/src/domain/appointment/: dto.rs  error.rs  mod.rs  model.rs  service.rs
crates/opengp-domain/src/domain/audit/: emitter.rs  error.rs  mod.rs  model.rs  repository.rs  service.rs
crates/opengp-domain/src/domain/billing/: error.rs  mbs_model.rs  mod.rs  model.rs  repository.rs  service.rs
crates/opengp-domain/src/domain/clinical/: dto.rs  error.rs  model.rs  repository.rs  service.rs
crates/opengp-domain/src/domain/immunisation/: error.rs  model.rs  repository.rs  service.rs
crates/opengp-domain/src/domain/pathology/: error.rs  repository.rs  service.rs
crates/opengp-domain/src/domain/patient/: dto.rs  error.rs  mod.rs  model.rs  repository.rs  service.rs  types.rs
crates/opengp-domain/src/domain/prescription/: dto.rs  error.rs  model.rs  repository.rs  service.rs
crates/opengp-domain/src/domain/referral/: error.rs  model.rs  repository.rs  service.rs
crates/opengp-domain/src/domain/user/: dto.rs  error.rs  mod.rs  model.rs  password.rs  password_test.rs  repository.rs  service.rs
crates/opengp-infrastructure/: Cargo.toml
crates/opengp-infrastructure/migrations/: 20260211_initial_schema.sql  20260214120000_update_users_schema.sql  20260214120100_seed_six_users.sql  20260223000000_add_reason_to_consultations.sql  20260226000000_replace_soap_with_clinical_notes.sql
crates/opengp-infrastructure/migrations/postgres/: 20260311000000_backend_placeholder.sql
crates/opengp-infrastructure/src/: lib.rs
crates/opengp-infrastructure/src/infrastructure/: mod.rs
crates/opengp-infrastructure/src/infrastructure/audit/: mod.rs
crates/opengp-infrastructure/src/infrastructure/auth/: mod.rs
crates/opengp-infrastructure/src/infrastructure/crypto/: mod.rs  password.rs
crates/opengp-infrastructure/src/infrastructure/database/: helpers.rs  mocks.rs  mod.rs  query.rs  test_utils.rs
crates/opengp-infrastructure/src/infrastructure/database/repositories/: appointment.rs  audit.rs  billing.rs  clinical.rs  mod.rs  patient.rs  postgres_user.rs  practitioner.rs  (+3 more)
crates/opengp-infrastructure/src/infrastructure/fixtures/: appointment_generator.rs  appointment_history_generator.rs  audit_generator.rs  billing_generator.rs  clinical_generator.rs  comprehensive_fixture_generator.rs  comprehensive_generator.rs  immunisation_generator.rs  mod.rs  patient_generator.rs  prescription_generator.rs  schedule_scenarios.rs  working_hours_generator.rs
crates/opengp-infrastructure/src/infrastructure/mbs/: importer.rs  mod.rs  xml_parser.rs
crates/opengp-theme-converter/: Cargo.toml
crates/opengp-theme-converter/src/: error.rs  lib.rs  main.rs  output.rs
crates/opengp-theme-converter/src/mapping/: color.rs  mapper.rs  mod.rs
crates/opengp-theme-converter/src/parse/: mod.rs  toml_parser.rs  yaml_parser.rs
crates/opengp-theme-converter/src/validation/: contrast.rs  fallbacks.rs  mod.rs
crates/opengp-theme-converter/tests/golden/: mod.rs
crates/opengp-ui/: Cargo.toml
crates/opengp-ui/src/: lib.rs
crates/opengp-ui/src/api/: client.rs  mod.rs
crates/opengp-ui/src/ui/: app.rs  app.rs.orig  error.rs  input.rs  keybinds.rs  layout.rs  mod.rs  theme.rs
crates/opengp-ui/src/ui/app/: app_state.rs  command.rs  error.rs  event.rs  event_handler.rs  global.rs  renderer.rs  state.rs
crates/opengp-ui/src/ui/components/: clinical_row.rs  help.rs  mod.rs  patient_tab_bar.rs  status_bar.rs  subtab_bar.rs  tabs.rs  welcome_panel.rs
crates/opengp-ui/src/ui/screens/: login.rs  mod.rs
crates/opengp-ui/src/ui/services/: appointment_service.rs  billing_service.rs  clinical_service.rs  mod.rs  patient_service.rs  shared.rs
crates/opengp-ui/src/ui/shared/: mod.rs  tests.rs  types.rs
crates/opengp-ui/src/ui/tests/: form_validation.rs  mod.rs  social_history_form.rs
crates/opengp-ui/src/ui/view_models/: mod.rs
crates/opengp-ui/src/ui/widgets/: calendar.rs  clinical_table_list.rs  context_menu.rs  date_picker_popup.rs  date_utils.rs  dropdown.rs  dynamic_form.rs  form_field.rs  form_field_macro.rs  form_navigation.rs  form_rules.rs  form_state.rs  inline_picker.rs  list_nav.rs  loading.rs  mod.rs  modal_state.rs  navigation.rs  scrollable.rs  scrollable_form.rs  searchable_list.rs  textarea.rs  time_picker_popup.rs  unified_list.rs  validation.rs
crates/opengp-ui/tests/: schedule_integration.rs
(+353 files in other folders)
