[workspace]
resolver = "2"
members = [
    "crates/opengp-domain",
    "crates/opengp-infrastructure",
    "crates/opengp-config",
    "crates/opengp-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Open source general practice management software for Australia"
license = "AGPL-3.0"
authors = ["OpenGP Contributors"]
rust-version = "1.86.0"

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.89"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
fake = { version = "2.9", features = ["chrono", "uuid", "derive"] }
dotenvy = "0.15"
sublime_fuzzy = "0.7"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
derive_builder = "0.20"
ratatui-textarea = "0.8"
