[workspace]
resolver = "2"
members = [
    "crates/opengp-domain",
    "crates/opengp-infrastructure",
    "crates/opengp-config",
    "crates/opengp-ui",
    "crates/opengp-api",
    "crates/opengp-cache",
]

[package]
name = "opengp"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
referral = ["opengp-domain/referral"]
pathology = ["opengp-domain/pathology"]
immunisation = ["opengp-domain/immunisation"]
prescription = ["opengp-domain/prescription"]

[dependencies]
opengp-domain = { path = "crates/opengp-domain" }
opengp-infrastructure = { path = "crates/opengp-infrastructure" }
opengp-config = { path = "crates/opengp-config" }
opengp-ui = { path = "crates/opengp-ui" }
opengp-api = { path = "crates/opengp-api" }
crossterm.workspace = true
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "opengp"
path = "src/main.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Open source general practice management software for Australia"
license = "AGPL-3.0"
authors = ["OpenGP Contributors"]
rust-version = "1.86.0"

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.89"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
bcrypt = "0.15"
rand = "0.8"
hex = "0.4"
fake = { version = "2.9", features = ["chrono", "uuid", "derive"] }
dotenvy = "0.15"
sublime_fuzzy = "0.7"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
derive_builder = "0.20"
ratatui-textarea = "0.8"
deadpool-redis = "0.23"
redis = "0.28"
toml = "0.8"
regex = "1"
opengp-config = { path = "crates/opengp-config" }

[dev-dependencies]
sqlx.workspace = true
axum = "0.8"
tower = "0.5"
