[package]
name = "opengp-config"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
toml.workspace = true
regex.workspace = true

[dev-dependencies]
temp-env = "0.3"
