[package]
name = "opengp-domain"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.89"
thiserror = "2"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
derive_builder = "0.20"
tracing = "0.1"
rand = "0.8"
hex = "0.4"
utoipa = { version = "5", features = ["chrono", "uuid"] }

[features]
billing = []
referral = []
pathology = []
immunisation = []
prescription = []

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
serde_json = "1"
