[package]
name = "opengp-infrastructure"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
billing = ["opengp-domain/billing"]
immunisation = ["opengp-domain/immunisation"]
prescription = ["opengp-domain/prescription"]

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
time.workspace = true
uuid.workspace = true
async-trait.workspace = true
aes-gcm.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
bcrypt.workspace = true
dotenvy.workspace = true
fake.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }

[dependencies.opengp-domain]
path = "../opengp-domain"

[dependencies.opengp-config]
path = "../opengp-config"

[[bin]]
name = "backfill_hashes"
path = "src/bin/backfill_hashes.rs"
