[package]
name = "opengp-theme-converter"
version.workspace = true
edition.workspace = true
description = "Theme conversion CLI for OpenGP"
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"

[dependencies.opengp-ui]
path = "../opengp-ui"
