[package]
name = "opengp-ui"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
prescription = ["opengp-domain/prescription"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
tracing.workspace = true
chrono.workspace = true
time.workspace = true
uuid.workspace = true
async-trait.workspace = true
sublime_fuzzy.workspace = true
strum.workspace = true
strum_macros.workspace = true
derive_builder.workspace = true
ratatui-textarea.workspace = true
regex.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dependencies.opengp-domain]
path = "../opengp-domain"

[dependencies.opengp-config]
path = "../opengp-config"

[dev-dependencies]
axum = "0.8"
insta = { version = "1", features = ["redactions"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
opengp-infrastructure = { path = "../opengp-infrastructure" }
